src/test/deca/test_compilateur/syntax/valid/created/class_vide.deca
// Description :
//		Une classe vide
//
// Resultats :
//		Ok


class A {
}
