src/test/deca/test_compilateur/syntax/invalid/created/class/new_missing_opar.deca
// Description :
//    new ( manquant
//
// Resultats :
//		Syntaxe error

{
new a);
}